--- a/src/sass/_mainContent.scss
+++ b/src/sass/_mainContent.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
+
 .main-content {
  @include BorderTestSection;
  height: 80vh;
@@ -6,6 +9,7 @@
  grid-template-areas: 'projects content';
  margin-top: 3em;
  padding: 2em;
+ //  perspective: 300px;
  &__btn-container {
   border: $borderTest;
   grid-area: projects;
@@ -64,8 +68,15 @@
     height: 30vh;
    }
   }
+
+  &__cards {
+   transition: all 2s;
+   position: absolute;
+   right: 11vw;
+   top: 29vh;
+  }
  }
- &__card {
+ &__card-sideA {
   width: 32vw;
   height: 41vh;
   border-radius: 1em;
@@ -74,9 +85,11 @@
   display: flex;
   flex-direction: column;
   padding: 2em 1em;
-  position: absolute;
-  right: 11vw;
-  top: 29vh;
+  position: relative;
+  //   right: 11vw;
+  //   top: 29vh;
+  transition: all 1s;
+
   &-name {
    width: 18vw;
   }
@@ -86,6 +99,48 @@
    position: relative;
    bottom: -17em;
    right: -84%;
+  }
+
+  &:hover {
+   //    background-color: crimson;
+  }
+ }
+
+ &__card-sideB {
+  width: 32vw;
+  height: 41vh;
+  border-radius: 1em;
+  background-color: #f04f5c;
+  //   background-color: crimson;
+  display: flex;
+  flex-direction: column;
+  padding: 2em 1em;
+  position: absolute;
+  //   right: 11vw;
+  top: 0;
+
+  color: rgb(243, 243, 243);
+  z-index: -1;
+  &__header-container {
+   font-family: 'Nova Square', cursive;
+   padding: 0.4em;
+   font-size: 2.5rem;
+   border-bottom: 2px solid white;
+   text-align: right;
+  }
+
+  &__text-container {
+   padding: 1em;
+   //    border: 1px solid aliceblue;
+   margin-top: 2em;
+   font-size: 1.5rem;
+   line-height: 26px;
+   font-family: 'Poppins', sans-serif;
+   font-weight: bold;
+  }
+
+  &:hover {
+   //    background-color: crimson;
   }
  }
 
@@ -97,5 +152,22 @@
   opacity: 0.4;
   color: #555;
   width: 13em;
+ }
+}
+
+.social-media {
+ align-self: end;
+ align-items: last baseline;
+ display: flex;
+ flex-direction: column;
+}
+
+.card-active {
+ transform: rotateX(-180deg);
+ div.main-content__card-sideA {
+  z-index: -2;
+ }
+ div.main-content__card-sideB {
+  transform: rotateX(190deg);
  }
 }
