--- a/src/sass/_mainContent.scss
+++ b/src/sass/_mainContent.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
 
 .main-content {
- @include BorderTestSection;
+ //  @include BorderTestSection;
  height: 80vh;
  display: grid;
  grid-template-columns: 18em 4fr;
@@ -11,7 +11,7 @@
  padding: 2em;
  //  perspective: 300px;
  &__btn-container {
-  border: $borderTest;
+  //   border: $borderTest;
   grid-area: projects;
   display: flex;
   flex-direction: column;
@@ -23,20 +23,19 @@
 
   button#transactional {
    position: relative;
-   top: 1.8em;
+   top: 1.3em;
   }
   button#newsletter {
    position: relative;
-   top: 3.2em;
+   top: 2.8em;
   }
   button#landingPage {
    position: relative;
-   bottom: -22.6em;
+   bottom: -22em;
   }
  }
-
  &__card-container {
-  border: $borderTest2;
+  //   border: $borderTest2;
   grid-area: content;
   //   height: 20vh;
   //   width: 100vw;
@@ -51,19 +50,17 @@
    }
 
    div.ghost-div:nth-child(1) {
-    border-top: 4px solid $circuitBorderColor;
-    border-right: 4px solid $circuitBorderColor;
-    border-bottom: 4px solid $circuitBorderColor;
+    border-top: 4px solid $tubeColor;
+    border-right: 4px solid $tubeColor;
+    border-bottom: 4px solid $tubeColor;
    }
    div.ghost-div:nth-child(2) {
-    border-bottom: 4px solid $circuitBorderColor;
-   }
-   div.ghost-div:nth-child(3) {
+    border-bottom: 4px solid $tubeColor;
    }
 
    div.ghost-div:last-child {
-    border-bottom: 4px solid $circuitBorderColor;
-    border-right: 4px solid $circuitBorderColor;
+    border-bottom: 4px solid $tubeColor;
+    border-right: 4px solid $tubeColor;
     width: 53vw;
     height: 30vh;
    }
@@ -89,7 +86,7 @@
   //   right: 11vw;
   //   top: 29vh;
   transition: all 1s;
-
+  cursor: pointer;
   &-name {
    width: 18vw;
   }
@@ -118,9 +115,10 @@
   position: absolute;
   //   right: 11vw;
   top: 0;
-
+  transition: all 1s;
   color: rgb(243, 243, 243);
   z-index: -1;
+  cursor: pointer;
   &__header-container {
    font-family: 'Nova Square', cursive;
    padding: 0.4em;
@@ -138,10 +136,6 @@
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
   }
-
-  &:hover {
-   //    background-color: crimson;
-  }
  }
 
  .project-btn {
@@ -152,6 +146,36 @@
   opacity: 0.4;
   color: #555;
   width: 13em;
+  //   letter-spacing: 1px;
+ }
+
+ &__screen.project {
+  width: 72vw;
+  height: 80vh;
+  border: 1px solid aliceblue;
+  position: absolute;
+  top: 14vh;
+  // background: antiquewhite;
+  background: linear-gradient(332.03deg, rgb(98, 46, 46), rgb(149, 141, 141));
+  left: 17vw;
+  border-radius: 7px;
+  // opacity: 0.96;
+  border: 2px solid $activeTubeColor;
+  // box-shadow: 0px 0px 11px #ff8888;
+  filter: drop-shadow(0 -3px 2px #fa9898) drop-shadow(0 3px 2px #fa9898);
+ }
+
+ &__screenProject-card {
+  width: 36vw;
+  display: inline-block;
+  height: 50vh;
+  border: $borderTest;
+ }
+
+ &__screen.project#landingPage-screen,
+ &__screen.project#newsletter-screen,
+ &__screen.project#transactional-screen {
+  display: none;
  }
 }
 
@@ -160,14 +184,99 @@
  align-items: last baseline;
  display: flex;
  flex-direction: column;
+ margin-bottom: 1.5em;
+
+ & > a > img {
+  width: 3.6em;
+  margin: 0.4em 0;
+  transition: -webkit-filter 0.2s ease-in;
+ }
 }
 
 .card-active {
- transform: rotateX(-180deg);
- div.main-content__card-sideA {
-  z-index: -2;
+ .main-content__card-container__cards {
+  transform: rotateX(-180deg);
+  div.main-content__card-sideA {
+   z-index: -2;
+  }
+  div.main-content__card-sideB {
+   transform: rotateX(190deg);
+   &:hover {
+    // background-color: rgb(109, 42, 59);
+   }
+  }
  }
- div.main-content__card-sideB {
-  transform: rotateX(190deg);
+ div.ghost-div:nth-child(1) {
+  @include tubeTop;
+ }
+ div.ghost-div:nth-child(2) {
+  @include tubeMiddle;
+ }
+ div.ghost-div:nth-child(4) {
+  @include tubeBottom;
+ }
+
+ .main-content__btn-container button.project-btn {
+  background-color: #d83340;
+  opacity: 0.7;
+  color: #e9e9e9;
+  border: 2px solid #eb8a9196;
+  filter: drop-shadow(0 0 5px #fd6b6b80);
+  box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
+  transition: opacity 300ms ease-in-out;
+  &:hover {
+   opacity: 1;
+   cursor: pointer;
+   font-weight: bold;
+  }
+ }
+ .main-content__btn-container button:nth-child(2) {
+  top: 1em !important;
+ }
+ .main-content__btn-container button:nth-child(3) {
+  top: 2.3em !important;
+ }
+ .main-content__btn-container button:nth-child(4) {
+  bottom: -36vh !important;
+ }
+ .main-content__card-container__cards div.main-content__card-sideB {
+  background-color: $activeCardColor;
+ }
+ .main-content__card-container__cards div.main-content__card-sideA {
+  background-color: $activeCardColor;
+ }
+ aside.social-media > a > img {
+  -webkit-filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
+   hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
+   drop-shadow(0px 1px 3px #000);
+  filter: blur(0px) brightness(2.5) contrast(5) grayscale(0) hue-rotate(190deg)
+   invert(0) opacity(100%) saturate(6) sepia(6.29)
+   drop-shadow(0px 1px 1px $activeSocialMediaColor);
+
+  &:hover {
+   -webkit-filter: blur(0px) brightness(2.7) contrast(7) grayscale(0)
+    hue-rotate(190deg) invert(0) opacity(100%) saturate(6) sepia(6.29)
+    drop-shadow(0px 1px 6px $activeSocialMediaColor);
+  }
+ }
+
+ background-color: $activeBodyColor;
+}
+
+$ProjectTubeActive: false;
+
+.project-active {
+ $ProjectTubeActive: true;
+}
+
+.project__btn-inactive {
+ .main-content__btn-container button.project-btn {
+  opacity: 0.5;
+ }
+}
+
+@if $ProjectTubeActive == true {
+ .project__tube-active-top {
+  @include tubeTop;
  }
 }
