--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,6 +2,8 @@ $borderTest: 1px solid rgb(17, 133, 26);
 $borderTest2: 1px solid rgb(17, 96, 133);
 $tubeColor: rgba(0, 0, 0, 0.116);
 // $tubeColorActive: #f8949c;
+$contactBtnColor: #50c5b7;
+$contactBtnColorHover: #50e4d2;
 $activeTubeColor: #eb8a91;
 $activeBodyColor: #81733f;
 $activeBtnColor: #f04f5c;
