--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -48,7 +48,7 @@ body {
   padding: 0.6em 1.9em;
   border-radius: 1.5em;
   border: none;
-  background: #50c5b7;
+  background: $contactBtnColor;
   color: #444444;
   font-family: 'Reem Kufi', sans-serif;
   //   font-weight: bold;
@@ -56,9 +56,9 @@ body {
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.25);
   margin-right: 2em;
   cursor: pointer;
-  transition: all 300ms ease-in-out;
+  @include transition-fast;
   &:hover {
-   background-color: #50e4d2;
+   background-color: $contactBtnColorHover;
    color: #2e2e2e;
   }
  }
