--- a/src/sass/_mainContent.scss
+++ b/src/sass/_mainContent.scss
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
 
 .main-content {
  //  @include BorderTestSection;
@@ -50,23 +51,23 @@
    }
 
    div.ghost-div:nth-child(1) {
-    border-top: 4px solid $tubeColor;
-    border-right: 4px solid $tubeColor;
-    border-bottom: 4px solid $tubeColor;
+    // border-top: 4px solid $tubeColor;
+    // border-right: 4px solid $tubeColor;
+    // border-bottom: 4px solid $tubeColor;
+    @include defaultTubeTop;
    }
    div.ghost-div:nth-child(2) {
-    border-bottom: 4px solid $tubeColor;
+    @include defaultTubeMiddle;
    }
 
    div.ghost-div:last-child {
-    border-bottom: 4px solid $tubeColor;
-    border-right: 4px solid $tubeColor;
+    @include defaultTubeBottom;
     width: 53vw;
     height: 30vh;
    }
   }
 
-  &__cards {
+  &__card {
    transition: all 2s;
    position: absolute;
    right: 11vw;
@@ -74,19 +75,20 @@
   }
  }
  &__card-sideA {
-  width: 32vw;
-  height: 41vh;
-  border-radius: 1em;
-  background-color: #f04f5c;
-  //   background-color: crimson;
-  display: flex;
-  flex-direction: column;
-  padding: 2em 1em;
+  // width: 32vw;
+  // height: 41vh;
+  // border-radius: 1em;
+  // background-color: #f04f5c;
+  // //   background-color: crimson;
+  // display: flex;
+  // flex-direction: column;
+  // padding: 2em 1em;
   position: relative;
   //   right: 11vw;
   //   top: 29vh;
-  transition: all 1s;
-  cursor: pointer;
+  // transition: all 1s;
+  // cursor: pointer;
+  @include defaultCardStyle;
   &-name {
    width: 18vw;
   }
@@ -97,28 +99,25 @@
    bottom: -17em;
    right: -84%;
   }
-
-  &:hover {
-   //    background-color: crimson;
-  }
  }
 
  &__card-sideB {
-  width: 32vw;
-  height: 41vh;
-  border-radius: 1em;
-  background-color: #f04f5c;
-  //   background-color: crimson;
-  display: flex;
-  flex-direction: column;
-  padding: 2em 1em;
+  // width: 32vw;
+  // height: 41vh;
+  // border-radius: 1em;
+  // background-color: #f04f5c;
+  // //   background-color: crimson;
+  // display: flex;
+  // flex-direction: column;
+  // padding: 2em 1em;
   position: absolute;
   //   right: 11vw;
   top: 0;
-  transition: all 1s;
+  // transition: all 1s;
   color: rgb(243, 243, 243);
   z-index: -1;
-  cursor: pointer;
+  // cursor: pointer;
+  @include defaultCardStyle;
   &__header-container {
    font-family: 'Nova Square', cursive;
    padding: 0.4em;
@@ -138,17 +137,6 @@
   }
  }
 
- .project-btn {
-  padding: 0.6em 2em;
-  border-radius: 2em;
-  border: none;
-  background: #fc6471;
-  opacity: 0.4;
-  color: #555;
-  width: 13em;
-  //   letter-spacing: 1px;
- }
-
  &__screen.project {
   width: 72vw;
   height: 80vh;
@@ -163,18 +151,32 @@
   border: 2px solid $activeTubeColor;
   // box-shadow: 0px 0px 11px #ff8888;
   filter: drop-shadow(0 -3px 2px #fa9898) drop-shadow(0 3px 2px #fa9898);
+  @include flexCentered;
+  // flex-wrap: wrap;
+  // overflow-y: scroll;
  }
 
  &__screenProject-card {
   width: 36vw;
   display: inline-block;
   height: 50vh;
-  border: $borderTest;
+  // border: $borderTest;
+ }
+
+ &__screenproject-header {
+  font-family: 'Reenie Beanie', cursive;
+  position: absolute;
+  top: 4vh;
+  right: 4vw;
+  font-size: 3.5rem;
+  color: #dedede;
  }
 
  &__screen.project#landingPage-screen,
  &__screen.project#newsletter-screen,
- &__screen.project#transactional-screen {
+ &__screen.project#transactional-screen,
+ &__screen.project#promo-screen,
+ &__screen.project#contact {
   display: none;
  }
 }
@@ -190,93 +192,14 @@
   width: 3.6em;
   margin: 0.4em 0;
   transition: -webkit-filter 0.2s ease-in;
- }
-}
-
-.card-active {
- .main-content__card-container__cards {
-  transform: rotateX(-180deg);
-  div.main-content__card-sideA {
-   z-index: -2;
-  }
-  div.main-content__card-sideB {
-   transform: rotateX(190deg);
-   &:hover {
-    // background-color: rgb(109, 42, 59);
-   }
-  }
- }
- div.ghost-div:nth-child(1) {
-  @include tubeTop;
- }
- div.ghost-div:nth-child(2) {
-  @include tubeMiddle;
- }
- div.ghost-div:nth-child(4) {
-  @include tubeBottom;
- }
-
- .main-content__btn-container button.project-btn {
-  background-color: #d83340;
-  opacity: 0.7;
-  color: #e9e9e9;
-  border: 2px solid #eb8a9196;
-  filter: drop-shadow(0 0 5px #fd6b6b80);
-  box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
-  transition: opacity 300ms ease-in-out;
-  &:hover {
-   opacity: 1;
-   cursor: pointer;
-   font-weight: bold;
-  }
- }
- .main-content__btn-container button:nth-child(2) {
-  top: 1em !important;
- }
- .main-content__btn-container button:nth-child(3) {
-  top: 2.3em !important;
- }
- .main-content__btn-container button:nth-child(4) {
-  bottom: -36vh !important;
- }
- .main-content__card-container__cards div.main-content__card-sideB {
-  background-color: $activeCardColor;
- }
- .main-content__card-container__cards div.main-content__card-sideA {
-  background-color: $activeCardColor;
- }
- aside.social-media > a > img {
-  -webkit-filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
-   hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
-   drop-shadow(0px 1px 3px #000);
-  filter: blur(0px) brightness(2.5) contrast(5) grayscale(0) hue-rotate(190deg)
-   invert(0) opacity(100%) saturate(6) sepia(6.29)
-   drop-shadow(0px 1px 1px $activeSocialMediaColor);
 
   &:hover {
    -webkit-filter: blur(0px) brightness(2.7) contrast(7) grayscale(0)
     hue-rotate(190deg) invert(0) opacity(100%) saturate(6) sepia(6.29)
     drop-shadow(0px 1px 6px $activeSocialMediaColor);
+   filter: blur(0px) brightness(2.7) contrast(7) grayscale(0) hue-rotate(190deg)
+    invert(0) opacity(100%) saturate(6) sepia(6.29)
+    drop-shadow(0px 1px 6px $activeSocialMediaColor);
   }
- }
-
- background-color: $activeBodyColor;
-}
-
-$ProjectTubeActive: false;
-
-.project-active {
- $ProjectTubeActive: true;
-}
-
-.project__btn-inactive {
- .main-content__btn-container button.project-btn {
-  opacity: 0.5;
- }
-}
-
-@if $ProjectTubeActive == true {
- .project__tube-active-top {
-  @include tubeTop;
  }
 }
