--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,3 +2,8 @@
 @import 'variables';
 @import 'base';
 @import 'mainContent';
+@import 'projectCards';
+@import 'projectBtns';
+@import 'activationLogic';
+@import 'contactScreen';
+@import 'responsive';
