mobile responsive_tray-done__on Project screen

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,4 +10,6 @@ $activeBtnColor: #f04f5c;
 $activeCardColor: #a02933;
 $activeSocialMediaColor: #f16d78;
 
+$trayNotchBGcolor: #8dc59d;
+
 $hoverColor: #f9b9b7;
