--- a/src/sass/_helper.scss
+++ b/src/sass/_helper.scss
@@ -19,6 +19,15 @@
  transition: all 300ms ease-in-out;
 }
 
+@mixin projectBtnDefault {
+ border-radius: 2em;
+ padding: 0.6em 2em;
+ border: none;
+ background: #fc6471;
+ opacity: 0.4;
+ color: #555;
+ cursor: pointer;
+}
 @mixin tubeFilter {
  filter: drop-shadow(0 -3px 2px #fd6b6b) drop-shadow(0 3px 2px #fd6b6b);
 }
@@ -33,6 +42,7 @@
 @mixin activeTubeMiddle {
  @include tubeFilter();
  border-bottom: 4px solid $activeTubeColor !important;
+ border-right: 4px solid $activeTubeColor !important;
 }
 
 @mixin activeTubeBottom {
@@ -50,6 +60,7 @@
 }
 @mixin defaultTubeMiddle {
  border-bottom: 4px solid $tubeColor;
+ border-right: 4px solid $tubeColor;
 }
 @mixin defaultTubeBottom {
  border-bottom: 4px solid $tubeColor;
