--- a/src/sass/_mainContent.scss
+++ b/src/sass/_mainContent.scss
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
 
 .main-content {
  //  @include BorderTestSection;
@@ -135,49 +135,6 @@
    font-family: 'Poppins', sans-serif;
    font-weight: bold;
   }
- }
-
- &__screen.project {
-  width: 72vw;
-  height: 80vh;
-  border: 1px solid aliceblue;
-  position: absolute;
-  top: 14vh;
-  // background: antiquewhite;
-  background: linear-gradient(332.03deg, rgb(98, 46, 46), rgb(149, 141, 141));
-  left: 17vw;
-  border-radius: 7px;
-  // opacity: 0.96;
-  border: 2px solid $activeTubeColor;
-  // box-shadow: 0px 0px 11px #ff8888;
-  filter: drop-shadow(0 -3px 2px #fa9898) drop-shadow(0 3px 2px #fa9898);
-  @include flexCentered;
-  // flex-wrap: wrap;
-  // overflow-y: scroll;
- }
-
- &__screenProject-card {
-  width: 36vw;
-  display: inline-block;
-  height: 50vh;
-  // border: $borderTest;
- }
-
- &__screenproject-header {
-  font-family: 'Reenie Beanie', cursive;
-  position: absolute;
-  top: 4vh;
-  right: 4vw;
-  font-size: 3.5rem;
-  color: #dedede;
- }
-
- &__screen.project#landingPage-screen,
- &__screen.project#newsletter-screen,
- &__screen.project#transactional-screen,
- &__screen.project#promo-screen,
- &__screen.project#contact {
-  display: none;
  }
 }
 
