--- a/src/sass/_projectBtns.scss
+++ b/src/sass/_projectBtns.scss
@@ -1,10 +1,16 @@
 .project-btn {
- padding: 0.6em 2em;
- border-radius: 2em;
- border: none;
- background: #fc6471;
- opacity: 0.4;
- color: #555;
+ //  padding: 0.6em 2em;
+ //  border-radius: 2em;
+ //  border: none;
+ //  background: #fc6471;
+ //  opacity: 0.4;
+ //  color: #555;
  width: 13em;
+ @include projectBtnDefault;
  //   letter-spacing: 1px;
+}
+
+// smaller device project btn tray
+
+aside.main-content__btn-container-tray {
 }
