--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -1,13 +1,211 @@
-.main-content {
- &__card-container__card {
-  right: 3vw;
- }
+@media screen and (max-width: 880px) {
+ .main-content {
+  &__card-container__card {
+   right: 8vw;
+  }
 
- &__card-sideA,
- &__card-sideB {
-  width: 50vw;
+  &__card-sideA,
+  &__card-sideB {
+   width: 50vw;
+  }
  }
 }
 
-//680px - smaller tab
+//698px - smaller tab
 // change container grid , put social media to the bottom as footer
+
+@media screen and (max-width: 698px) {
+ div.container {
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto;
+  grid-template-areas: 'header' 'mainContent' 'social';
+ }
+
+ button.header__contact {
+  margin-right: 0;
+ }
+ aside.social-media {
+  flex-direction: row;
+  justify-content: end;
+
+  & > a > img {
+   margin: 0 0.6em;
+  }
+ }
+}
+
+@media screen and (max-width: 564px) {
+ div.container {
+  padding: 1em 0;
+ }
+ div.main-content__card-container__card {
+  right: 4vw;
+ }
+
+ aside.social-media {
+  padding-right: 2em;
+ }
+}
+
+@media screen and (max-width: 500px) {
+ body {
+  overflow-y: hidden;
+ }
+
+ div.container {
+  padding: 1em 0;
+ }
+ div.main-content__card-container__card {
+  //   right: 4vw;
+  width: 90%;
+ }
+
+ div.main-content__card-sideA,
+ div.main-content__card-sideB {
+  width: 100%;
+ }
+
+ aside.social-media {
+  display: none;
+ }
+
+ .main-content__btn-container,
+ div.ghost-div__container {
+  display: none;
+ }
+ //onclick for smallerDevice..move it from here and put on another class that will get added by click for smaller device
+ article.main-content__card-sideB__text-container {
+  display: none;
+ }
+ article.main-content__card-sideB__header-container {
+  border: none;
+ }
+
+ h1.main-content__card-sideB-heading {
+  position: absolute;
+  bottom: 5%;
+  left: 35vw;
+ }
+
+ div.main-content__card-container__card {
+  width: 96%;
+  top: 1vh;
+  left: 2%;
+  margin: 0 0;
+  z-index: -1;
+ }
+
+ div.main-content__card-sideA,
+ div.main-content__card-sideB {
+  height: 13vh;
+ }
+
+ .main-content__btn-container-tray {
+  //   border: $borderTest2;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  height: 60vh;
+  padding: 1em;
+  background-color: #0e0e0ed9;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  //   backdrop-filter: blur(10px);
+  bottom: -52%;
+  @include transition-fast;
+  &:hover {
+   background-color: rgb(26, 26, 26);
+   //    opacity: 1;
+  }
+  &__top-notch {
+   width: 10em;
+   display: inline-block;
+   height: 0.8em;
+   background: #349085;
+   border-radius: 4px;
+   margin-left: 2.5em;
+   cursor: pointer;
+   @include transition-fast;
+   //    background-color: $trayNotchBGcolor;
+   //    box-shadow: 0px 0px 2px 8px #9dffad;
+   &:hover {
+    background-color: $trayNotchBGcolor;
+    // background-color: palegreen;
+    box-shadow: 0px 0px 5px 3px #65dd777a;
+   }
+  }
+
+  .main-content__btn-container-tray__header-container {
+   //    border: 1px solid white;
+   color: rgb(238, 237, 237);
+   font-size: 1.3rem;
+   font-family: 'Nova Square', cursive;
+   display: flex;
+   justify-content: space-around;
+   width: 100%;
+   letter-spacing: 1px;
+  }
+
+  &__container {
+   $trayBtnBorderColor: rgba(190, 189, 86, 0.822);
+   height: 65%;
+   width: 90%;
+   margin: 0 auto;
+   margin-top: 3em;
+   @include flexCentered;
+   flex-direction: column;
+   //    border-right: 4px solid $trayBtnBorderColor;
+   //    border-bottom: 4px solid $trayBtnBorderColor;
+   //    border-left: 4px solid $trayBtnBorderColor;
+   border-radius: 4px;
+   box-shadow: 0 1px 3px #707041be;
+
+   button.project-btn__tray {
+    margin: 1em 0;
+    width: 90%;
+    // filter: drop-shadow(0 -3px 2px #fdd66b);
+    box-shadow: 0px 0px 4px grey;
+    @include projectBtnDefault;
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    letter-spacing: 1px;
+    @include transition-fast;
+    &:hover {
+     opacity: 1;
+     box-shadow: 0px 0px 8px rgb(243, 129, 199);
+     color: rgb(53, 53, 53);
+    }
+   }
+  }
+
+  aside.social-media-tray {
+   position: absolute;
+   bottom: 0;
+   margin: 1em auto;
+
+   & > a > img {
+    width: 3.6em;
+    margin: 1em 0.6em;
+    transition: -webkit-filter 0.2s ease-in;
+    transition: filter 0.2s ease-in;
+    -webkit-filter: blur(0px) brightness(5) contrast(1) grayscale(0)
+     hue-rotate(190deg) invert(0) opacity(80%) saturate(1) sepia(0)
+     drop-shadow(0px 1px 1px $activeSocialMediaColor);
+    filter: blur(0px) brightness(3.2) contrast(1) grayscale(0)
+     hue-rotate(190deg) invert(0) opacity(80%) saturate(1) sepia(0)
+     drop-shadow(0px 1px 1px $activeSocialMediaColor);
+
+    &:hover {
+     -webkit-filter: blur(0px) brightness(5) contrast(7) grayscale(0)
+      hue-rotate(190deg) invert(0) opacity(100%) saturate(6) sepia(6.29)
+      drop-shadow(0px 1px 4px $activeSocialMediaColor);
+     filter: blur(0px) brightness(5) contrast(7) grayscale(0) hue-rotate(190deg)
+      invert(0) opacity(100%) saturate(6) sepia(6.29)
+      drop-shadow(0px 1px 4px $activeSocialMediaColor);
+    }
+   }
+  }
+ }
+}
