--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
+
 @import 'helper';
 @import 'variables';
 @import 'base';
@@ -7,3 +11,4 @@
 @import 'activationLogic';
 @import 'contactScreen';
 @import 'responsive';
+@import 'projectScreen';
