--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -85,6 +85,7 @@
   position: absolute;
   bottom: 5%;
   left: 35vw;
+  // color: #7b2929;
  }
 
  div.main-content__card-container__card {
@@ -93,11 +94,18 @@
   left: 2%;
   margin: 0 0;
   z-index: -1;
+  opacity: 0.6;
+  cursor: pointer;
+  &:hover {
+   opacity: 1;
+   color: #f3f3f3 !important;
+  }
  }
 
  div.main-content__card-sideA,
  div.main-content__card-sideB {
   height: 13vh;
+  cursor: pointer;
  }
 
  .main-content__btn-container-tray {
