--- a/src/sass/_projectCards.scss
+++ b/src/sass/_projectCards.scss
@@ -21,6 +21,10 @@
 
 div.project-card__container {
  width: 29em;
+ //  width: 20vw;
+ //  width: 26vw;
+ //  max-width: 18vw;
+ //  min-width: 27vw;
  //  border: 1px solid aqua;
  height: 39.3em;
  position: relative;
