--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -1,75 +1,75 @@
-.card-active {
- .main-content__card-container__card {
-  transform: rotateX(-180deg);
-  div.main-content__card-sideA {
-   z-index: -2;
-  }
-  div.main-content__card-sideB {
-   transform: rotateX(190deg);
-   &:hover {
-    // background-color: rgb(109, 42, 59);
-   }
-  }
- }
- div.ghost-div:nth-child(1) {
-  @include tubeTop;
- }
- div.ghost-div:nth-child(2) {
-  @include activeTubeMiddle;
- }
- div.ghost-div:nth-child(4) {
-  @include activeTubeBottom;
- }
+// .card-active {
+//  .main-content__card-container__card {
+//   transform: rotateX(-180deg);
+//   div.main-content__card-sideA {
+//    z-index: -2;
+//   }
+//   div.main-content__card-sideB {
+//    transform: rotateX(190deg);
+//    &:hover {
+//     // background-color: rgb(109, 42, 59);
+//    }
+//   }
+//  }
+//  div.ghost-div:nth-child(1) {
+//   @include tubeTop;
+//  }
+//  div.ghost-div:nth-child(2) {
+//   @include activeTubeMiddle;
+//  }
+//  div.ghost-div:nth-child(4) {
+//   @include activeTubeBottom;
+//  }
 
- .main-content__btn-container button.project-btn {
-  background-color: #d83340;
-  opacity: 0.7;
-  color: #e9e9e9;
-  border: 2px solid #eb8a9196;
-  filter: drop-shadow(0 0 5px #fd6b6b80);
-  box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
-  transition: opacity 300ms ease-in-out;
-  &:hover {
-   opacity: 1;
-   cursor: pointer;
-   font-weight: bold;
-  }
- }
- .main-content__btn-container button:nth-child(2) {
-  top: 1em !important;
- }
- .main-content__btn-container button:nth-child(3) {
-  top: 2.3em !important;
- }
- .main-content__btn-container button:nth-child(4) {
-  bottom: -36vh !important;
- }
- .main-content__card-container__card div.main-content__card-sideB {
-  background-color: $activeCardColor;
- }
- .main-content__card-container__card div.main-content__card-sideA {
-  background-color: $activeCardColor;
- }
- aside.social-media > a > img {
-  -webkit-filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
-   hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
-   drop-shadow(0px 1px 3px #000);
-  filter: blur(0px) brightness(2.5) contrast(5) grayscale(0) hue-rotate(190deg)
-   invert(0) opacity(100%) saturate(6) sepia(6.29)
-   drop-shadow(0px 1px 1px $activeSocialMediaColor);
+//  .main-content__btn-container button.project-btn {
+//   background-color: #d83340;
+//   opacity: 0.7;
+//   color: #e9e9e9;
+//   border: 2px solid #eb8a9196;
+//   filter: drop-shadow(0 0 5px #fd6b6b80);
+//   box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
+//   transition: opacity 300ms ease-in-out;
+//   &:hover {
+//    opacity: 1;
+//    cursor: pointer;
+//    font-weight: bold;
+//   }
+//  }
+//  .main-content__btn-container button:nth-child(2) {
+//   top: 1em !important;
+//  }
+//  .main-content__btn-container button:nth-child(3) {
+//   top: 2.3em !important;
+//  }
+//  .main-content__btn-container button:nth-child(4) {
+//   bottom: -36vh !important;
+//  }
+//  .main-content__card-container__card div.main-content__card-sideB {
+//   background-color: $activeCardColor;
+//  }
+//  .main-content__card-container__card div.main-content__card-sideA {
+//   background-color: $activeCardColor;
+//  }
+//  aside.social-media > a > img {
+//   -webkit-filter: blur(0px) brightness(2.6) contrast(4.8) grayscale(0.18)
+//    hue-rotate(170deg) invert(0.1) opacity(100%) saturate(4.3) sepia(0.29)
+//    drop-shadow(0px 1px 3px #000);
+//   filter: blur(0px) brightness(2.5) contrast(5) grayscale(0) hue-rotate(190deg)
+//    invert(0) opacity(100%) saturate(6) sepia(6.29)
+//    drop-shadow(0px 1px 1px $activeSocialMediaColor);
 
-  &:hover {
-   -webkit-filter: blur(0px) brightness(2.7) contrast(7) grayscale(0)
-    hue-rotate(190deg) invert(0) opacity(100%) saturate(6) sepia(6.29)
-    drop-shadow(0px 1px 6px $activeSocialMediaColor);
-   filter: blur(0px) brightness(2.7) contrast(7) grayscale(0) hue-rotate(190deg)
-    invert(0) opacity(100%) saturate(6) sepia(6.29)
-    drop-shadow(0px 1px 6px $activeSocialMediaColor);
-  }
- }
+//   &:hover {
+//    -webkit-filter: blur(0px) brightness(2.7) contrast(7) grayscale(0)
+//     hue-rotate(190deg) invert(0) opacity(100%) saturate(6) sepia(6.29)
+//     drop-shadow(0px 1px 6px $activeSocialMediaColor);
+//    filter: blur(0px) brightness(2.7) contrast(7) grayscale(0) hue-rotate(190deg)
+//     invert(0) opacity(100%) saturate(6) sepia(6.29)
+//     drop-shadow(0px 1px 6px $activeSocialMediaColor);
+//   }
+//  }
 
- background-color: $activeBodyColor;
-}
+//  background-color: $activeBodyColor;
+// }
 
 .project-active {
  $ProjectTubeActive: true;
