--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -1,21 +1,30 @@
 .main-content {
+ &__screen-container {
+  display: none;
+ }
  &__screen.project {
-  width: 72vw;
-  height: 80vh;
-  border: 1px solid aliceblue;
+  width: 60vw;
+  height: 76vh;
+
   position: absolute;
-  top: 14vh;
+  top: 13vh;
   // background: antiquewhite;
   background: linear-gradient(332.03deg, rgb(98, 46, 46), rgb(149, 141, 141));
-  left: 17vw;
+  //   left: 17vw;
+  margin-left: 11vw;
   border-radius: 7px;
   // opacity: 0.96;
-  border: 2px solid $activeTubeColor;
+  //   border: 2px solid $activeTubeColor;
   // box-shadow: 0px 0px 11px #ff8888;
-  filter: drop-shadow(0 -3px 2px #fa9898) drop-shadow(0 3px 2px #fa9898);
+  filter: drop-shadow(0 -3px 1px #c67e7e) drop-shadow(0 2px 2px #c67e7e);
   @include flexCentered;
   // flex-wrap: wrap;
   // overflow-y: scroll;
+ }
+
+ &__screenproject-card__wrapper {
+  @include flexCentered;
+  width: 100%;
  }
 
  &__screenProject-card {
@@ -34,10 +43,10 @@
   color: #dedede;
  }
 
- &__screen.project#landingPage-screen,
- &__screen.project#newsletter-screen,
- &__screen.project#transactional-screen,
- &__screen.project#promo-screen,
+ //  &__screen.project#landingPage-screen,
+ //  &__screen.project#newsletter-screen,
+ //  &__screen.project#transactional-screen,
+ //  &__screen.project#promo-screen,
  &__screen.project#contact {
   display: none;
  }
@@ -60,13 +69,15 @@
    overflow-x: scroll;
   }
 
+  //root: rule for project Screen
+
   // &__screen.project#landingPage-screen,
   // &__screen.project#newsletter-screen,
   // &__screen.project#transactional-screen,
   // &__screen.project#promo-screen
-  &__screen.project#contact {
-   display: flex;
-  }
+  //   &__screen.project#contact {
+  //    display: flex;
+  //   }
   &__screen.project#contact {
    padding: 4em;
    text-align: center;
