--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,6 +10,7 @@ $activeBtnColor: #f04f5c;
 $activeCardColor: #a02933;
 $activeSocialMediaColor: #f16d78;
 
-$trayNotchBGcolor: #8dc59d;
+$trayNotchBGcolor__hover: #8dc59d;
+$trayNotchBGcolor: #349085;
 
 $hoverColor: #f9b9b7;
