--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,11 +5,11 @@ $tubeColor: rgba(0, 0, 0, 0.116);
 $contactBtnColor: #50c5b7;
 $contactBtnColorHover: #50e4d2;
 $activeTubeColor: #eb8a91;
-$activeBodyColor: #81733f;
+$activeBodyColor: #927e36da;
 $activeBtnColor: #f04f5c;
 $activeCardColor: #a02933;
 $activeSocialMediaColor: #f16d78;
-
+$activeCardSideColor: #a02933;
 $trayNotchBGcolor__hover: #8dc59d;
 $trayNotchBGcolor: #349085;
 
