--- a/src/sass/_helper.scss
+++ b/src/sass/_helper.scss
@@ -24,7 +24,7 @@
  padding: 0.6em 2em;
  border: none;
  background: #fc6471;
- opacity: 0.4;
+ opacity: 0.6;
  color: #555;
  cursor: pointer;
 }
@@ -87,4 +87,17 @@
  padding: 2em 1em;
  transition: all 1s;
  cursor: pointer;
+}
+
+// active cardSide Style - mobile
+
+@mixin activeCardSide {
+ .main-content__card-container__card div.main-content__card-sideB {
+  // background-color: $activeCardColor;
+  background-color: $activeCardSideColor;
+ }
+ .main-content__card-container__card div.main-content__card-sideA {
+  // background-color: $activeCardColor;
+  background-color: $activeCardSideColor;
+ }
 }
