--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -43,10 +43,10 @@
   color: #dedede;
  }
 
- //  &__screen.project#landingPage-screen,
- //  &__screen.project#newsletter-screen,
- //  &__screen.project#transactional-screen,
- //  &__screen.project#promo-screen,
+ &__screen.project#landingPage-screen,
+ &__screen.project#newsletter-screen,
+ &__screen.project#transactional-screen,
+ &__screen.project#promo-screen,
  &__screen.project#contact {
   display: none;
  }
@@ -71,13 +71,12 @@
 
   //root: rule for project Screen
 
-  // &__screen.project#landingPage-screen,
-  // &__screen.project#newsletter-screen,
-  // &__screen.project#transactional-screen,
-  // &__screen.project#promo-screen
-  //   &__screen.project#contact {
-  //    display: flex;
-  //   }
+  &__screen.project#landingPage-screen,
+  &__screen.project#newsletter-screen,
+  &__screen.project#transactional-screen,
+  &__screen.project#promo-screen &__screen.project#contact {
+   //    display: flex;
+  }
   &__screen.project#contact {
    padding: 4em;
    text-align: center;
