--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -176,8 +176,8 @@
   position: absolute;
   left: 0;
   height: 60vh;
-  padding: 1em;
-  background-color: #0e0e0ed9;
+  // padding: 1em;
+  background-color: #111010d9;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -217,21 +217,23 @@
    justify-content: space-around;
    width: 100%;
    letter-spacing: 1px;
+   height: 5em;
+   padding-top: 2em;
   }
 
   &__container {
-   $trayBtnBorderColor: rgba(190, 189, 86, 0.822);
+   $trayBtnBorderColor: rgba(110, 104, 52, 0.822);
    height: 65%;
    width: 90%;
    margin: 0 auto;
-   margin-top: 3em;
+   margin-top: 2em;
    @include flexCentered;
    flex-direction: column;
    //    border-right: 4px solid $trayBtnBorderColor;
    //    border-bottom: 4px solid $trayBtnBorderColor;
    //    border-left: 4px solid $trayBtnBorderColor;
    border-radius: 4px;
-   box-shadow: 0 1px 3px #707041be;
+   box-shadow: 0 0 16px $trayBtnBorderColor;
 
    button.project-btn__tray {
     margin: 1em 0;
@@ -289,34 +291,34 @@
   display: none;
  }
  .project-active {
-  h1.main-content__card-sideB-heading {
-   position: absolute;
-   bottom: 5%;
-   left: 32vw;
-   // color: #7b2929;
-  }
+  // h1.main-content__card-sideB-heading {
+  //  position: absolute;
+  //  bottom: 5%;
+  //  left: 32vw;
+  //  // color: #7b2929;
+  // }
 
-  div.main-content__card-container__card {
-   width: 96%;
-   top: 1vh;
-   left: 2%;
-   margin: 0 0;
+  // div.main-content__card-container__card {
+  //  width: 96%;
+  //  top: 1vh;
+  //  left: 2%;
+  //  margin: 0 0;
 
-   opacity: 0.6;
-   cursor: pointer;
-   &:hover {
-    opacity: 1;
-    color: #f3f3f3 !important;
-   }
-  }
+  //  opacity: 0.6;
+  //  cursor: pointer;
+  //  &:hover {
+  //   opacity: 1;
+  //   color: #f3f3f3 !important;
+  //  }
+  // }
 
-  article.main-content__card-sideB__text-container {
-   display: none;
-  }
-  article.main-content__card-sideB__header-container {
-   border: none;
-   font-size: 5.5vw;
-  }
+  // article.main-content__card-sideB__text-container {
+  //  display: none;
+  // }
+  // article.main-content__card-sideB__header-container {
+  //  border: none;
+  //  font-size: 5.5vw;
+  // }
  }
 }
 
