--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Nova+Square&family=Poppins:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Reenie+Beanie&display=swap');
 
-@import 'helper';
+@import 'mixins';
 @import 'variables';
 @import 'base';
 @import 'mainContent';
