project screen_modal_done

--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -111,3 +111,11 @@
   }
  }
 }
+
+.projectScreen__project {
+ display: none;
+}
+
+.projectScreen__project-project#promo-codeschool {
+ display: none;
+}
