--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -263,3 +263,114 @@
   font-size: 5.5vw;
  }
 }
+
+//project slider
+
+.slideLeft {
+ transform: translateX(-100%);
+}
+
+//project screen
+
+.project-active {
+ display: block !important;
+ width: 100vw;
+ height: 100vh;
+ position: absolute;
+ background: #101010de;
+ top: 0;
+ left: 0;
+ text-align: center;
+ z-index: 2;
+
+ .projectScreen__project_modal-close {
+  width: 100%;
+  height: 60vh;
+  // background: #faebd72b;
+  position: absolute;
+ }
+ .projectScreen__project-cross {
+  color: rgb(247, 247, 247);
+  font-size: 4.4rem;
+  position: absolute;
+  right: 3%;
+  cursor: pointer;
+  &:hover {
+   color: rgb(197, 197, 197);
+   font-size: 4.6rem;
+  }
+ }
+
+ .projectScreen__project-project {
+  width: 80vw;
+  height: 80vh;
+  //   background: #5c5c5c;
+  border-radius: 4px;
+  position: relative;
+  margin: 0 auto;
+  top: 5%;
+  text-align: center;
+  z-index: -1;
+  //   @include flexCentered;
+  .projectScreen__project-project__header {
+   color: whitesmoke;
+   font-size: 2.5rem;
+   letter-spacing: 1px;
+   margin-bottom: 2vh;
+   font-family: Arial, Helvetica, sans-serif;
+   //  font-family: 'Reenie Beanie', cursive;
+  }
+
+  .projectScreen__project-project__wrapper {
+   @include flexCentered;
+   @include transition-ease;
+   width: 80vw;
+   height: 80vh;
+   //    background-color: rgb(77, 67, 51);
+   & > img {
+    width: 100%;
+    max-width: 59.2em;
+    max-height: 34em;
+    max-height: 100%;
+    margin: 0 2em;
+   }
+  }
+ }
+
+ .navigation-container {
+  position: absolute;
+  //   bottom: 4vh;
+  //   left: 40vw;
+  top: 50%;
+  width: 100%;
+ }
+
+ .fa {
+  color: whitesmoke;
+  font-size: 3.4rem;
+  background-color: rgb(33, 143, 143);
+  //   background-color: #39a397;
+  border-radius: 50%;
+  padding: 0.2em;
+  width: 1.4em;
+  margin: 0 1em;
+  display: none;
+  cursor: pointer;
+  &:hover {
+   background-color: rgb(34, 90, 90);
+  }
+ }
+ .fa.fa-angle-left {
+  position: absolute;
+  left: 0;
+ }
+
+ .fa.fa-angle-right {
+  position: absolute;
+  right: 0;
+ }
+}
+
+.promo-active {
+ display: inline-block !important;
+}
