--- a/src/sass/_projectCards.scss
+++ b/src/sass/_projectCards.scss
@@ -97,7 +97,8 @@ span.main-content__screenProject-card {
  position: relative;
  top: 50%;
 
- > img {
+ > img,
+ a > img {
   background: #a4a2a2;
   border-radius: 50%;
   padding: 2em;
