project screen__onProgress

--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -371,6 +371,10 @@
  }
 }
 
-.promo-active {
+.project-promo-active {
+ display: inline-block !important;
+}
+
+.project-transactional-active {
  display: inline-block !important;
 }
