--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -116,6 +116,10 @@
  display: none;
 }
 
-.projectScreen__project-project#promo-codeschool {
+.projectScreen__project-project#project-promo {
  display: none;
+}
+
+.projectScreen__project-project#project-transactional {
+ //  display: none;
 }
