--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -12,5 +12,5 @@ $activeSocialMediaColor: #f16d78;
 $activeCardSideColor: #a02933;
 $trayNotchBGcolor__hover: #8dc59d;
 $trayNotchBGcolor: #349085;
-
+$liveLinkColor: rgb(248, 155, 170);
 $hoverColor: #f9b9b7;
