--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -321,6 +321,16 @@
    //  font-family: 'Reenie Beanie', cursive;
   }
 
+  .projectScreen__project-project__header-transactional,
+  .projectScreen__project-project__header-newsletter {
+   color: whitesmoke;
+   font-size: 2.5rem;
+   letter-spacing: 1px;
+   margin-bottom: 1vh;
+   font-family: Arial, Helvetica, sans-serif;
+   //  font-family: 'Reenie Beanie', cursive;
+  }
+
   .projectScreen__project-project__wrapper {
    @include flexCentered;
    @include transition-ease;
@@ -377,4 +387,14 @@
 
 .project-transactional-active {
  display: inline-block !important;
+}
+.project-newsletter-active {
+ display: inline-block !important;
+}
+.project-transactional-active {
+ display: inline-block !important;
+}
+
+.negativeIndex {
+ z-index: -1;
 }
