--- a/src/sass/_projectScreen.scss
+++ b/src/sass/_projectScreen.scss
@@ -112,6 +112,39 @@
  }
 }
 
+.navigation-container {
+ position: absolute;
+ //   bottom: 4vh;
+ //   left: 40vw;
+ top: 50%;
+ width: 100%;
+}
+
+.fa {
+ color: whitesmoke;
+ font-size: 3.4rem;
+ background-color: rgb(33, 143, 143);
+ //   background-color: #39a397;
+ border-radius: 50%;
+ padding: 0.2em;
+ width: 1.4em;
+ margin: 0 1em;
+ display: none;
+ cursor: pointer;
+ &:hover {
+  background-color: rgb(34, 90, 90);
+ }
+}
+.fa.fa-angle-left {
+ position: absolute;
+ left: 0;
+}
+
+.fa.fa-angle-right {
+ position: absolute;
+ right: 0;
+}
+
 p.projectScreen__project-project__liveLink {
  font-size: 1.3rem;
  font-family: Arial, Helvetica, sans-serif;
