mobile functionality done

--- a/src/sass/_responsive.scss
+++ b/src/sass/_responsive.scss
@@ -363,6 +363,7 @@
   border-radius: 0.6em;
   width: 100%;
   padding: 2em;
+  z-index: 1;
  }
  .projectScreen__project div.navigation-container {
   position: relative;
