--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -148,6 +148,16 @@
  .main-content__screen.project#promo-screen {
   display: flex;
  }
+
+ article.main-content__card-container
+  .ghost-div__containerdiv.ghost-div:nth-child(2) {
+ }
+
+ article.main-content__card-container
+  .ghost-div__container
+  div.ghost-div:nth-child(4) {
+  @include defaultTubeBottom;
+ }
 }
 
 .projectTransactionActivate {
