--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,7 +1,7 @@
 $borderTest: 1px solid rgb(17, 133, 26);
 $borderTest2: 1px solid rgb(17, 96, 133);
 $tubeColor: rgba(0, 0, 0, 0.116);
-// $tubeColorActive: #f8949c;
+$tubeColorActive: #f7858f;
 $contactBtnColor: #50c5b7;
 $contactBtnColorHover: #50e4d2;
 $activeTubeColor: #eb8a91;
