--- a/src/sass/_activationLogic.scss
+++ b/src/sass/_activationLogic.scss
@@ -14,18 +14,7 @@
  }
 
  .main-content__btn-container button.project-btn {
-  background-color: #d83340;
-  opacity: 0.7;
-  color: #e9e9e9;
-  border: 2px solid #eb8a9196;
-  filter: drop-shadow(0 0 5px #fd6b6b80);
-  box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
-  transition: opacity 300ms ease-in-out;
-  &:hover {
-   opacity: 1;
-   cursor: pointer;
-   font-weight: bold;
-  }
+  @include activeBtn;
  }
  .main-content__btn-container button:nth-child(2) {
   top: 1em !important;
@@ -60,7 +49,7 @@
   }
  }
 
- background-color: $activeBodyColor;
+ @include activeBody;
 
  //mobile tray animation
 
@@ -141,49 +130,72 @@
  }
 }
 
-.projectPromoActivateMobile {
- section.main-content__screen-container {
-  display: inline-block;
- }
+.projectPromoActivate {
+ @include defaultProjectActivation;
  .main-content__screen.project#promo-screen {
   display: flex;
  }
 
  article.main-content__card-container
-  .ghost-div__containerdiv.ghost-div:nth-child(2) {
+  div.ghost-div__container
+  div.ghost-div:nth-child(1) {
+  @include activeTubePromo;
  }
 
- article.main-content__card-container
-  .ghost-div__container
-  div.ghost-div:nth-child(4) {
-  @include defaultTubeBottom;
+ .main-content__btn-container button.project-btn#promo {
+  @include activeBtn;
  }
 }
 
 .projectTransactionActivate {
- section.main-content__screen-container {
-  display: inline-block;
- }
+ @include defaultProjectActivation;
  .main-content__screen.project#transactional-screen {
   display: flex;
+ }
+
+ article.main-content__card-container
+  div.ghost-div__container
+  div.ghost-div:nth-child(1) {
+  @include activeTubeTransactional;
+ }
+
+ .main-content__btn-container button.project-btn#transactional {
+  @include activeBtn;
  }
 }
 
 .projectNewsletterActivate {
- section.main-content__screen-container {
-  display: inline-block;
- }
+ @include defaultProjectActivation;
+
  .main-content__screen.project#newsletter-screen {
   display: flex;
+ }
+
+ article.main-content__card-container
+  div.ghost-div__container
+  div.ghost-div:nth-child(2) {
+  @include activeTubeNewsletter;
+ }
+
+ .main-content__btn-container button.project-btn#newsletter {
+  @include activeBtn;
  }
 }
 
 .projectLandingPageActivate {
- section.main-content__screen-container {
-  display: inline-block;
- }
+ @include defaultProjectActivation;
  .main-content__screen.project#landingPage-screen {
   display: flex;
+ }
+
+ article.main-content__card-container
+  div.ghost-div__container
+  div.ghost-div:nth-child(4) {
+  @include activeTubeLandingPage;
+ }
+
+ .main-content__btn-container button.project-btn#landingPage {
+  @include activeBtn;
  }
 }
 
@@ -285,9 +297,10 @@
 }
 
 //project slider
-
-.slideLeft {
- transform: translateX(-100%);
+@media screen and (max-width: 800px) {
+ .slideLeft {
+  transform: translateX(-100%);
+ }
 }
 
 //project screen
@@ -367,6 +380,20 @@
     margin: 0 2em;
    }
   }
+ }
+
+ .projectScreen__project-project#project-newsletter {
+  top: 1%;
+  img#img-newsletter {
+   width: 16em;
+  }
+ }
+}
+
+.projectScreen__project-project#project-landingPage {
+ div.landingPage > img {
+  width: 100%;
+  min-width: 80vw;
  }
 }
 
