--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -50,6 +50,7 @@
 }
 
 //activeTubes
+
 @mixin tubeTop {
  border-top: 4px solid $activeTubeColor !important;
  border-right: 4px solid $activeTubeColor !important;
@@ -69,13 +70,26 @@
  border-bottom: 4px solid $activeTubeColor !important;
 }
 
-//active tube style
+//active Project-tube style
 
-@mixin activeTubeTop {
- border-top: 4px solid $tubeColor;
+@mixin activeTubePromo {
+ border-top: 4px solid $activeTubeColor;
+ @include tubeFilter();
 }
-@mixin activeTubeSecond {
- border-bottom: 4px solid $tubeColor;
+
+@mixin activeTubeTransactional {
+ border-bottom: 4px solid $activeTubeColor;
+ @include tubeFilter();
+}
+
+@mixin activeTubeNewsletter {
+ border-bottom: 4px solid $activeTubeColor;
+ @include tubeFilter();
+}
+
+@mixin activeTubeLandingPage {
+ border-bottom: 4px solid $activeTubeColor;
+ @include tubeFilter();
 }
 
 @mixin defaultCardStyle {
@@ -91,6 +105,12 @@
  cursor: pointer;
 }
 
+//active body color
+
+@mixin activeBody {
+ background-color: $activeBodyColor;
+}
+
 // active cardSide Style - mobile
 
 @mixin activeCardSideColor {
@@ -101,6 +121,23 @@
  .main-content__card-container__card div.main-content__card-sideA {
   // background-color: $activeCardColor;
   background-color: $activeCardSideColor;
+ }
+}
+
+//active button style
+
+@mixin activeBtn {
+ background-color: #d83340;
+ opacity: 0.7;
+ color: #e9e9e9;
+ border: 2px solid #eb8a9196;
+ filter: drop-shadow(0 0 5px #fd6b6b80);
+ box-shadow: 1px 1px 9px 0px rgba(245, 145, 145, 0.66);
+ transition: opacity 300ms ease-in-out;
+ &:hover {
+  opacity: 1;
+  cursor: pointer;
+  font-weight: bold;
  }
 }
 
@@ -118,4 +155,22 @@
    background-color: rgb(145, 15, 47);
   }
  }
+}
+
+//card hide
+
+@mixin cardHide {
+ div.main-content__card-container__card {
+  display: none;
+ }
+}
+
+//default project activation
+
+@mixin defaultProjectActivation {
+ @include activeBody;
+ section.main-content__screen-container {
+  display: inline-block;
+ }
+ @include cardHide;
 }
